# cs288-final-project

./: .env.example  .gitignore  README.md  evaluate.py  links.txt  pyproject.toml
helpers/: RAG_dataset.csv  csv_to_json.py
locale/: translation-example.pot
locale/de/LC_MESSAGES/: translation-example.po
locale/zh/LC_MESSAGES/: translation-example.po
manim/: main.py  render_parallel.py  scenes.py
manim-voiceover/: .readthedocs.yml  README.md  pyproject.toml
manim-voiceover/examples/: approximating-tau.py  azure-example.py  bookmark-example.py  coqui-example.py  elevenlabs-example.py  gtts-example.py  openai-example.py  pyttsx3-example.py  quadratic-formula-arabic.py  recorder-example.py  voiceover-demo.py
manim-voiceover/examples/translation-example/: translation-example.py
manim-voiceover/manim_voiceover/: __init__.py  defaults.py  helper.py  modify_audio.py  tracker.py  voiceover_scene.py
manim-voiceover/manim_voiceover/services/: azure.py  base.py  elevenlabs.py  gtts.py  openai.py  pyttsx3.py  stitcher.py
manim-voiceover/manim_voiceover/translate/: __init__.py  gettext_utils.py  render.py  translate.py
prompts/: lecture_qa_system.txt
rag/: __init__.py  __main__.py  chunking.py  cli.py  retrieval.py
retrieval_corpus/chunks/: lecture_chunks.jsonl
retrieval_corpus/cogsci_c127/: lecture_questions.json
retrieval_corpus/cogsci_c127/OCR/: Lecture13part1_lecture.json  Lecture13part2_lecture.json  Lecture13part3_lecture.json  Lecture14part1_lecture.json  Lecture14part2_lecture.json  Lecture14part3_lecture.json  Lecture15part1_lecture.json  Lecture15part2_lecture.json  Lecture_10_slides.json  (+16 more)
retrieval_corpus/speech/: Lecture13part2_lecture (1).json
scripts/: eval_lecture_hf.py
(+75 files in other folders)
