[project]
name = "cs288"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6,<3.12"
dependencies = [
    "manim>=0.19.1",
    "manim-themes>=0.1.3",
    "manim-voiceover[elevenlabs,gtts,transcribe,translate]>=0.6.9",
    "numba>=0.63.1",
    "setuptools<81",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.uv.sources]
manim-voiceover = { path = "./manim-voiceover", editable = true }
[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<81"]